--- a/index.html
+++ b/index.html
@@ -56,11 +56,14 @@
 		
         <script type="text/javascript" src="script/script.js"></script>
         <script type="text/javascript" src="script/cascade.js"></script>
+		<script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
+		<script src='https://threejs.org/examples/js/libs/stats.min.js'></script>
 
     </head>
 
+	<div id="particles-js"></div>
+	<script  src="script/particles.js"></script>
     <body class="background-carbon">
-				
         <!-- Header -->
 		<div class="header-wrapper">
 			
